--- a/j_custom_graph/graph3.html
+++ b/j_custom_graph/graph3.html
@@ -153,12 +153,12 @@
                                 unit: 'minute',
                                 tooltipFormat: 'yyyy-MM-dd HH:mm:ss',
                                 displayFormats: {
-                                    minute: 'HH:mm'
+                                    minute: 'yyyy-MM-dd HH:mm'  // 日付と時刻を表示
                                 }
                             },
                             title: {
                                 display: true,
-                                text: '時刻'
+                                text: '日時'
                             }
                         },
                         y: {
