--- a/j_custom_graph/graph.html
+++ b/j_custom_graph/graph.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>メモリ内でデータを保存し複数グラフを描画</title>
+    <title>グラフのデータを記憶</title>
     <style>
         .container {
             max-width: 86vw;
@@ -24,21 +24,9 @@
             margin-bottom: 20px;
         }
 
-        #resetButton1,
-        #resetButton2,
-        #resetButton3,
-        #inputValue1,
-        #inputValue2,
-        #inputValue3,
-        #submitButton1,
-        #submitButton2,
-        #submitButton3,
-        #titleInput1,
-        #titleInput2,
-        #titleInput3,
-        #updateTitleButton1,
-        #updateTitleButton2,
-        #updateTitleButton3 {
+        #inputValue,
+        #submitButton,
+        #resetButton {
             margin: 10px;
             padding: 10px;
             font-size: 16px;
@@ -67,81 +55,44 @@
 
 <body>
     <div class="container">
-        <!-- 体重グラフ -->
         <div class="graph-controls">
-            <input type="number" id="inputValue1" placeholder="値を入力 (A)" step="0.1">
-            <button type="button" id="submitButton1">グラフAを更新</button>
-            <button type="button" id="resetButton1" class="resetButton">グラフAのデータ削除</button>
-            <input type="text" id="titleInput1" placeholder="タイトルを入力 (A)">
-            <button type="button" id="updateTitleButton1">タイトルを更新</button>
+            <input type="number" id="inputValue" placeholder="値を入力" step="0.1">
+            <button type="button" id="submitButton">グラフを更新</button>
+            <button type="button" id="resetButton" class="resetButton">グラフのデータ削除</button>
         </div>
-        <canvas id="chartA"></canvas>
-
-        <!-- 株価グラフ -->
-        <div class="graph-controls">
-            <input type="number" id="inputValue2" placeholder="値を入力 (B)" step="0.01">
-            <button type="button" id="submitButton2">グラフBを更新</button>
-            <button type="button" id="resetButton2" class="resetButton">グラフBのデータ削除</button>
-            <input type="text" id="titleInput2" placeholder="タイトルを入力 (B)">
-            <button type="button" id="updateTitleButton2">タイトルを更新</button>
-        </div>
-        <canvas id="chartB"></canvas>
-
-        <!-- 順位グラフ -->
-        <div class="graph-controls">
-            <input type="number" id="inputValue3" placeholder="値を入力 (C)" step="1">
-            <button type="button" id="submitButton3">グラフCを更新</button>
-            <button type="button" id="resetButton3" class="resetButton">グラフCのデータ削除</button>
-            <input type="text" id="titleInput3" placeholder="タイトルを入力 (C)">
-            <button type="button" id="updateTitleButton3">タイトルを更新</button>
-        </div>
-        <canvas id="chartC"></canvas>
+        <canvas id="chart"></canvas>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
-    <script src="https://cdn.jsdelivr.net/npm/date-fns"></script>
     <script>
-        // ローカルストレージからデータを取得
-        function loadFromLocalStorage() {
-            const dataA = JSON.parse(localStorage.getItem('dataA') || '[]');
-            const dataB = JSON.parse(localStorage.getItem('dataB') || '[]');
-            const dataC = JSON.parse(localStorage.getItem('dataC') || '[]');
-            const titleA = localStorage.getItem('titleA') || 'グラフA';
-            const titleB = localStorage.getItem('titleB') || 'グラフB';
-            const titleC = localStorage.getItem('titleC') || 'グラフC';
-            return { dataA, dataB, dataC, titleA, titleB, titleC };
+        // グラフデータをlocalStorageから取得する関数
+        function loadDataFromLocalStorage() {
+            const storedData = localStorage.getItem('graphData');
+            return storedData ? JSON.parse(storedData) : [];
         }
 
-        // ローカルストレージにデータを保存
-        function saveToLocalStorage() {
-            localStorage.setItem('dataA', JSON.stringify(memoryStorage.dataA));
-            localStorage.setItem('dataB', JSON.stringify(memoryStorage.dataB));
-            localStorage.setItem('dataC', JSON.stringify(memoryStorage.dataC));
-            localStorage.setItem('titleA', memoryStorage.titleA);
-            localStorage.setItem('titleB', memoryStorage.titleB);
-            localStorage.setItem('titleC', memoryStorage.titleC);
+        // グラフデータをlocalStorageに保存する関数
+        function saveDataToLocalStorage(data) {
+            localStorage.setItem('graphData', JSON.stringify(data));
         }
-
-        // メモリ内にデータを保存するためのオブジェクト
-        const memoryStorage = loadFromLocalStorage();
 
         // データを保存する関数
-        function saveData(key, value) {
-            const timestamp = new Date().toISOString();
-            memoryStorage[key].push({ time: timestamp, value: value });
-            saveToLocalStorage();  // データが変更されたらローカルストレージに保存
+        function saveData(value) {
+            const timestamp = new Date().toISOString(); // ISO形式の日時を取得
+            const data = loadDataFromLocalStorage();
+            data.push({ time: timestamp, value: value });
+            saveDataToLocalStorage(data);
         }
 
         // データを取得してグラフを描画する関数
-        function updateChart(chart, key) {
-            const data = memoryStorage[key].map(item => ({ x: new Date(item.time), y: parseFloat(item.value) }));
+        function updateChart(chart) {
+            const data = loadDataFromLocalStorage().map(item => ({ x: new Date(item.time), y: parseFloat(item.value) }));
             chart.data.datasets[0].data = data;
             chart.update();
         }
 
         // グラフ初期化関数
-        function createChart(ctx, title) {
+        function createChart(ctx) {
             return new Chart(ctx, {
                 type: 'line',
                 data: {
@@ -158,7 +109,7 @@
                     plugins: {
                         title: {
                             display: true,
-                            text: title
+                            text: 'データ記憶グラフ'
                         }
                     },
                     scales: {
@@ -168,7 +119,7 @@
                                 unit: 'minute',
                                 tooltipFormat: 'yyyy-MM-dd HH:mm:ss',
                                 displayFormats: {
-                                    minute: 'yyyy-MM-dd HH:mm'
+                                    minute: 'yyyy-MM-dd HH:mm'  // 日付と時刻を表示
                                 }
                             },
                             title: {
@@ -188,92 +139,28 @@
             });
         }
 
-        // ページが読み込まれたときにグラフを初期化
         document.addEventListener('DOMContentLoaded', function () {
-            const ctxA = document.getElementById('chartA').getContext('2d');
-            const chartA = createChart(ctxA, memoryStorage.titleA);
-            const ctxB = document.getElementById('chartB').getContext('2d');
-            const chartB = createChart(ctxB, memoryStorage.titleB);
-            const ctxC = document.getElementById('chartC').getContext('2d');
-            const chartC = createChart(ctxC, memoryStorage.titleC);
+            // グラフの初期化
+            const ctx = document.getElementById('chart').getContext('2d');
+            const chart = createChart(ctx);
 
-            updateChart(chartA, 'dataA');
-            updateChart(chartB, 'dataB');
-            updateChart(chartC, 'dataC');
+            // ページが読み込まれた際にグラフを更新
+            updateChart(chart);
 
-            document.getElementById('submitButton1').addEventListener('click', function () {
-                const inputValue1 = document.getElementById('inputValue1').value;
-                if (inputValue1 !== "") {
-                    saveData('dataA', parseFloat(inputValue1));
-                    updateChart(chartA, 'dataA');
-                    document.getElementById('inputValue1').value = '';
+            // グラフ更新ボタンの処理
+            document.getElementById('submitButton').addEventListener('click', function () {
+                const inputValue = document.getElementById('inputValue').value;
+                if (inputValue !== "") {
+                    saveData(parseFloat(inputValue));
+                    updateChart(chart);
+                    document.getElementById('inputValue').value = '';
                 }
             });
 
-            document.getElementById('submitButton2').addEventListener('click', function () {
-                const inputValue2 = document.getElementById('inputValue2').value;
-                if (inputValue2 !== "") {
-                    saveData('dataB', parseFloat(inputValue2));
-                    updateChart(chartB, 'dataB');
-                    document.getElementById('inputValue2').value = '';
-                }
-            });
-
-            document.getElementById('submitButton3').addEventListener('click', function () {
-                const inputValue3 = document.getElementById('inputValue3').value;
-                if (inputValue3 !== "") {
-                    saveData('dataC', parseFloat(inputValue3));
-                    updateChart(chartC, 'dataC');
-                    document.getElementById('inputValue3').value = '';
-                }
-            });
-
-            document.getElementById('resetButton1').addEventListener('click', function () {
-                memoryStorage.dataA = [];
-                saveToLocalStorage();
-                updateChart(chartA, 'dataA');
-            });
-
-            document.getElementById('resetButton2').addEventListener('click', function () {
-                memoryStorage.dataB = [];
-                saveToLocalStorage();
-                updateChart(chartB, 'dataB');
-            });
-
-            document.getElementById('resetButton3').addEventListener('click', function () {
-                memoryStorage.dataC = [];
-                saveToLocalStorage();
-                updateChart(chartC, 'dataC');
-            });
-
-            document.getElementById('updateTitleButton1').addEventListener('click', function () {
-                const titleInput1 = document.getElementById('titleInput1').value;
-                if (titleInput1 !== "") {
-                    memoryStorage.titleA = titleInput1;
-                    chartA.options.plugins.title.text = memoryStorage.titleA;
-                    chartA.update();
-                    saveToLocalStorage();
-                }
-            });
-
-            document.getElementById('updateTitleButton2').addEventListener('click', function () {
-                const titleInput2 = document.getElementById('titleInput2').value;
-                if (titleInput2 !== "") {
-                    memoryStorage.titleB = titleInput2;
-                    chartB.options.plugins.title.text = memoryStorage.titleB;
-                    chartB.update();
-                    saveToLocalStorage();
-                }
-            });
-
-            document.getElementById('updateTitleButton3').addEventListener('click', function () {
-                const titleInput3 = document.getElementById('titleInput3').value;
-                if (titleInput3 !== "") {
-                    memoryStorage.titleC = titleInput3;
-                    chartC.options.plugins.title.text = memoryStorage.titleC;
-                    chartC.update();
-                    saveToLocalStorage();
-                }
+            // グラフリセットボタンの処理
+            document.getElementById('resetButton').addEventListener('click', function () {
+                localStorage.removeItem('graphData'); // localStorageからデータ削除
+                updateChart(chart);
             });
         });
     </script>
