--- a/j_custom_graph/graph.html
+++ b/j_custom_graph/graph.html
@@ -59,11 +59,10 @@
     <div class="container">
         <div class="graph-controls">
             <input type="number" id="inputValue" placeholder="値を入力" step="0.1">
-            <button type="button" id="submitButton">グラフを更新</button>
-            <button type="button" id="resetButton" class="resetButton">グラフのデータ削除</button>
-            <br>
+            <button type="button" id="submitButton">input</button>
+            <button type="button" id="resetButton" class="resetButton">reset</button>
             <input type="text" id="titleInput" placeholder="タイトルを入力">
-            <button type="button" id="updateTitleButton">タイトルを更新</button>
+            <button type="button" id="updateTitleButton">title</button>
         </div>
         <canvas id="chart"></canvas>
     </div>
