--- a/j_custom_graph/graph.html
+++ b/j_custom_graph/graph.html
@@ -127,7 +127,10 @@
                     plugins: {
                         title: {
                             display: true,
-                            text: title
+                            text: title,
+                            font: {
+                                size: 24 // タイトルのフォントサイズを設定
+                            }
                         }
                     },
                     scales: {
