--- a/m_update_check/url_update_check.html
+++ b/m_update_check/url_update_check.html
@@ -29,7 +29,7 @@
     <script>
         let intervalId;
         let previousContent = ''; // 前回のページ内容を保存
-        const urlToCheck = 'https://qiita.com/timeline'; // チェックしたいURLを指定
+        const urlToCheck = 'https://coconala.com/requests/categories/11?categoryId=11&page=1'; // チェックしたいURLを指定
 
         // URLをリンクに反映
         document.getElementById('urlLink').href = urlToCheck;
