--- a/m_update_check/url_update_check.html
+++ b/m_update_check/url_update_check.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-    <p>URL監視システム</p>
+    <h1>URL監視システム</h1>
 
     <!-- URLを入力できるテキストボックス -->
-    <label for="urlInput">監視するURLを入力してください:</label>
+    <label for="urlInput">監視するURL:</label>
     <input type="text" id="urlInput" class="double-width" placeholder="https://example.com"><br><br>
 
     <!-- ボタンを使って監視の開始・停止を管理 -->
